--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,10 @@
   <meta charset='utf-8' />
   <title>FI 1956 Aerial Photos</title>
   <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-  <!-- <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js'></script> -->
-  <script src='../lib/js/mapbox-gl.js'></script>
-  <!-- <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' /> -->
-  <link href='../lib/styles/mapbox-gl.css' rel='stylesheet' />
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
+  <!-- <script src='../lib/js/mapbox-gl.js'></script> -->
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
+  <!-- <link href='../lib/styles/mapbox-gl.css' rel='stylesheet' /> -->
   <!-- <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script> -->
   <script src='../lib/js/turf.min.js'></script>
   <script src='../lib/js/jquery-3.3.1.min.js'></script>
